--- a/package.json
+++ b/package.json
@@ -64,12 +64,13 @@
     "react-scripts": "3.0.1"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "child_process": "^1.0.2",
     "find-process": "^1.4.1",
     "fs-extra": "^8.0.1",
     "node-fetch": "^2.6.0",
     "pcca-verifier": "^1.0.70510",
-    "pdfjs-dist": "1.9.426",
+    "pdfjs-dist": "2.0.943",
     "pkijs": "^2.1.77",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
